--- a/css/styles.css
+++ b/css/styles.css
@@ -10845,21 +10845,35 @@ html {
   scroll-padding-top: calc(4.5rem - 1px);
 }
 
-.page-section {  
+.page-section {
+  padding: 4rem 0;
+}
+.page-section .page-section-heading {
+  font-size: 2.25rem;
+  line-height: 2rem;
+}
+@media (min-width: 992px) {
+  .page-section .page-section-heading {
+    font-size: 3rem;
+    line-height: 2.5rem;
+  }
+}
+
+.page-section-main {  
   padding-top: calc(6rem + 74px);
   padding-bottom: 6rem;
 }
-.page-section .page-section-heading {
+.page-section-main .page-section-main-heading {
   font-size: 2.75rem;
   line-height: 2.75rem;
 }
 @media (min-width: 992px) {
-  .page-section {
+  .page-section-main {
     padding-top: calc(6rem + 74px);
     padding-bottom: 6rem;
   }
   
-  .page-section-heading {
+  .page-section-main-heading {
     font-size: 4rem;
     line-height: 3.5rem;
   }
